--- a/www/templates/tab-discount.html
+++ b/www/templates/tab-discount.html
@@ -2,7 +2,7 @@
 <ion-content>
   <div class="free-intro">
     <div ng-bind-html="discountC"></div>
-    
+
     <div class="step text-center">
       Current points
       <h2 style="font-size: 32px; text-align:center; ">
@@ -10,7 +10,7 @@
       </h2>
     </div>
     <div class="button-row">
-      <button class="button button-block button-positive" ng-click="scan()">Scan Now</button>
+      <button class="button button-block button-positive" ng-click="scan()">Get Rewards</button>
     </div>
 
   </div>
