--- a/www/templates/tab-discount2.html
+++ b/www/templates/tab-discount2.html
@@ -10,7 +10,7 @@
       </h2>
     </div>
     <div class="button-row">
-      <button class="button button-block button-dark" ng-click="scan()">Scan Now</button>
+      <button class="button button-block button-dark" ng-click="scan()">Get Rewards</button>
     </div>
 
   </div>
